# codex-starter-pack

./: .claude.json  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX.md  MANIFEST.in  README.md  aegis.delivery-policy.json  conftest.py  pyproject.toml  rm
.aegis/: brief.json
.claude/: AGENTS.md  settings.json
.claude/agents/: task-checker.md  task-executor.md  task-orchestrator.md
.claude/commands/: guard.md  kickoff.md  plan-sync.md  readiness.md  scanner-run.md  sessions-update.md  work-tracking-audit.md  work-tracking-update.md
.claude/engine/: claude-readiness.md  runtime-contract.md  tool-mapping.md
.claude/scripts/: brief_lib.py  (+10 more)
.codex/: AGENTS.md  config.toml  deep-work.config.toml  fast-iterate.config.toml
.cursor/: mcp.json
.plan_state/: compaction-history.jsonl
.serena/: project.yml
.taskmaster/: CLAUDE.md  config.json  state.json
aegis_foundation/: __init__.py  cli.py  codex_remote_trust.py  codex_topology.py  gas_city_authority.py  gas_city_ops.py  legacy_projection.py  managed_update.py  mcp_registration.py  obsidian_vault.py  output_budget.py  reconcile_apply_runtime.py  reconcile_apply_scaffold.py  reconcile_shadow_apply.py  reconcile_shadow_precision.py  replay.py  replay_coldstart.py  resources.py  taskmaster_beads.py  taskmaster_toolchain.py  worktree_capture_audit.py
aegis_mcp/: __init__.py  server.py
plans/: 2025-09-25-plan-compliance-phase1.md  2025-09-27-plan-compliance-phase2.md  2025-09-27-task82-meta-workflow.md  2025-09-29-task83-regression-suite.md  2025-09-30-task84-timestamp-gate.md  2025-10-01-task85-session-continuation.md  2025-10-04-task86-domain-workflows.md  2025-10-04-task87-replace-monolith.md  2025-10-20-task88-taskmaster-alignment.md  2025-10-27-task89-work-tracking-enforcement.md  2026-04-21-task90-complete-engine-migration.md  2026-04-21-task91-standardize-template-metadata.md  2026-04-22-task92-expand-workflow-guard-coverage.md  2026-04-23-task93-remediate-compaction-detection.md  2026-04-24-task100-foundation-bootstrap-layer.md  2026-04-24-task101-cross-project-compatibility-fixtures.md  2026-04-24-task102-foundation-migration-adoption.md  2026-04-24-task94-expand-enforcement-framework.md  2026-04-24-task95-template-drift-detection.md  2026-04-24-task96-interactive-template-wizard.md  2026-04-24-task97-template-metrics-dashboard.md  2026-04-24-task98-externalize-repo-structure-config.md  2026-04-24-task99-portable-foundation-spec.md  2026-04-25-task1-codebase-structure-analysis.md  2026-04-25-task2-python-environment-dependencies.md  2026-04-26-task3-port-ssot-scanner-suite.md  2026-04-30-task4-scanner-configuration-system.md  2026-05-01-task4-schema-validation.md  2026-05-02-task4-pr-handoff.md  2026-05-04-task4-merge-cleanup-task5-kickoff.md  2026-05-04-task5-codex-task-cli-tool.md  2026-05-04-task6-codex-guard-validation-tool.md  2026-05-04-task7-baseline-scanner-outputs.md  2026-05-05-task8-template-registry-system.md  2026-05-06-task103-claude-runtime-adapter.md  2026-05-06-task9-git-hooks-infrastructure.md  2026-05-07-task10-reference-fix-scripts.md  2026-05-07-task104-targeted-taskmaster-generation-helper.md  2026-05-07-task105-claude-runtime-adapter-hardening.md  2026-05-07-task106-claude-runtime-smoke-test.md  (+185 more)
reports/: README.md
scripts/: __init__.py  _aegis_installer.py  _repo_structure.py  _source_workflow_state.py  aegis-delivery-policy  aegis-mcp-server  codex-guard  codex-task  template-cost-report  template-metrics-dashboard  template-migration-health-dashboard  template-monitoring  template-performance-harness  template-phase0-validation  template_lifecycle.py  template_registry.py  template_testing.py  template_versioning.py
sessions/: current  state.json
taskmaster-backup/: prd.txt  tasks.json
templates/: BEHAVIORS.md  BUILDING-BETTER.md  CONVENTIONS.md  HANDLERS.md  MATRICES.md  PATTERNS.md  PROJECT-BLOG.md  REGISTRY.md  TOOLS.md  USER-GUIDE.md  WORKFLOWS.md
(+4731 files in other folders)
