[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-foundation"
version = "0.1.0"
description = "Portable multi-agent workflow foundation, runtime gates, and Aegis installer tooling."
readme = { file = "README.md", content-type = "text/markdown" }
license = "LicenseRef-Proprietary"
authors = [
    { name = "loucmane" },
]
maintainers = [
    { name = "loucmane" },
]
requires-python = ">=3.11"
keywords = [
    "agents",
    "aegis",
    "claude",
    "codex",
    "mcp",
    "workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.0,<9.0.0",
    "jsonschema>=4.22,<5.0",
    "mcp>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.5.0,<16.0.0",
]

[project.urls]
Homepage = "https://github.com/loucmane/codex-starter-pack"
Repository = "https://github.com/loucmane/codex-starter-pack"
Documentation = "https://github.com/loucmane/codex-starter-pack/tree/main/docs/aegis"
Issues = "https://github.com/loucmane/codex-starter-pack/issues"

[project.scripts]
aegis = "aegis_foundation.cli:main"
aegis-mcp-server = "aegis_mcp.server:main"

[dependency-groups]
dev = [
    "black>=24.0.0,<27.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pre-commit>=3.6.0,<5.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "ruff>=0.4.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "aegis_foundation*",
    "aegis_mcp*",
    "scripts",
]
namespaces = true

[tool.setuptools.package-data]
aegis_foundation = [
    "assets/CODEX.md",
    "assets/.claude/scripts/*",
    "assets/docs/aegis/*.md",
    "assets/schemas/aegis/*.json",
    "assets/scripts/*",
    "assets/templates/registry/*.json",
    "assets/**/*",
]

[tool.setuptools.exclude-package-data]
aegis_foundation = [
    "assets/**/__pycache__/*",
    "assets/**/*.pyc",
    "assets/**/*.pyo",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "scripts/template-ssot-scanner",
]
python_files = [
    "test_*.py",
]
norecursedirs = [
    "tests/fixtures",
]
addopts = "-ra"
markers = [
    "integration: marks integration tests",
    "performance: marks performance-sensitive tests",
    "mutation: marks mutation tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
